--- a/tennis-repository/pom.xml
+++ b/tennis-repository/pom.xml
@@ -8,12 +8,11 @@
         <version>3.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>tennis-application</artifactId>
+    <groupId>be.bnp</groupId>
+    <artifactId>tennis-repository</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>tennis-application</name>
-    <description>tennis-application</description>
+    <name>tennis-repository</name>
+    <description>tennis-repository</description>
     <url/>
     <licenses>
         <license/>
@@ -33,25 +32,17 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.bnp</groupId>
-            <artifactId>tennis-rest</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>be.bnp</groupId>
-            <artifactId>tennis-repository</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -61,9 +52,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>com.bnp.tennis.application.TennisApplication</mainClass>
-                </configuration>
             </plugin>
         </plugins>
     </build>
