--- a/tennis-repository/pom.xml
+++ b/tennis-repository/pom.xml
@@ -8,7 +8,7 @@
         <version>3.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>be.bnp</groupId>
+    <groupId>com.bnp</groupId>
     <artifactId>tennis-repository</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>tennis-repository</name>
